--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--关于界面-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +21,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="关于软件      "
+            android:text="@string/about_title"
             android:textColor="#ffffff"
             android:textSize="24sp"
             android:gravity="center_horizontal" />
@@ -36,7 +37,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="一键呼救 1.0.0(beta)"
+        android:text="@string/version_info"
         android:textSize="20sp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="200dp"
@@ -51,7 +52,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="By FDU Doctors（2017）"
+        android:text="@string/company_info"
         android:textSize="16sp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp"
