--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -66,4 +66,13 @@
             android:layout_marginTop="220dp"
             android:alpha="0.6"/>
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/switch_c"
+        android:clickable="false"
+        android:layout_width="62dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/doctor_marker" />
 </RelativeLayout>
