--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="帮助说明      "
+            android:text="@string/help_title"
             android:textColor="#ffffff"
             android:textSize="24sp"
             android:gravity="center_horizontal" />
