--- a/app/src/main/res/layout/listviewitem.xml
+++ b/app/src/main/res/layout/listviewitem.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--联系人列表获取-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
