--- a/app/src/main/res/layout/logout.xml
+++ b/app/src/main/res/layout/logout.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="退出登录      "
+            android:text="@string/logout_title"
             android:textColor="#ffffff"
             android:textSize="24sp"
             android:gravity="center_horizontal" />
