--- a/app/src/main/res/layout/usercenter_header.xml
+++ b/app/src/main/res/layout/usercenter_header.xml
@@ -23,7 +23,7 @@
         android:id="@+id/user_center_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="一键呼救"
+        android:text="一键呼救BC"
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         android:lineSpacingMultiplier="1.2"
